[gd_scene load_steps=5 format=1]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://ships/enemy-0.png" type="Texture" id=2]
[ext_resource path="res://sounds/sounds.tres" type="SampleLibrary" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 40.0

[node name="Enemy" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
kill_score = 10
miss_score = 0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="sound" type="SamplePlayer2D" parent="." groups=[ "corpse" ]]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 4
config/samples = ExtResource( 3 )
config/pitch_random = 0.0

[node name="dying_timer" type="Timer" parent="." groups=[ "corpse" ]]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="body_enter" from="." to="." method="_on_body_enter"]

[connection signal="enter_space_area" from="." to="." method="_on_enter_space_area"]

[connection signal="killed" from="." to="." method="play_explosion"]

[connection signal="left_space_area" from="." to="." method="_on_left_space_area"]

[connection signal="timeout" from="dying_timer" to="." method="queue_free"]


